--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,7 +49,7 @@
                 <a class="nav-link" href="#">Cart</a>
               </li>
               <li class="nav-item btn-sm login">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" href="/login">Login</a>
             </li>
             </ul>
           </div>
