--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,18 +39,20 @@
               <li class="nav-item active">
                 <a class="nav-link" href="#">Categories <span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="#">Products</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Shipping</a>
-              </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="#">Cart</a>
               </li>
-              <li class="nav-item btn-sm login">
-              <a class="nav-link" href="/login">Login</a>
-            </li>
+                <li class="nav-item login">
+                {{#if logged_in}}
+                <a class="nav-link" href="/logout" id="logout">Logout</a>
+                </li>
+                {{else}}
+                <a class="nav-link" href="/login">Login</a>
+                </li>
+                {{/if}}
             </ul>
           </div>
         </nav>
@@ -78,5 +80,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
    
+   {{#if logged_in}}
+    <script src="/js/logout.js"></script>
+    {{/if}}
   </body>
 </html>
