--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="#">Categories <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Products</a>
+                <a class="nav-link" href="/api/products">Products</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="#">Cart</a>
