--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -17,8 +17,8 @@
                   </div>
               </div>
           </div>
-          <div class="col-lg-6 col-md-7 col-12 image_img">
-              <img src="/img/promo1.jpeg" alt="">
+          <div class="col-lg-6 col-md-7 col-12">
+              <img src="/img/promo1.jpeg" alt="" class="main-image">
           </div>
       </div>
   </div>
