--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
   <div class="col-md-6">
     <h2>Login</h2>
@@ -37,6 +38,7 @@
       </div>
     </form>
   </div>
+</div>
 </div>
 
 <script src="./js/login.js"></script>
