--- a/views/partials/product-details.handlebars
+++ b/views/partials/product-details.handlebars
@@ -1,4 +1,4 @@
-<div class="card">
+{{!-- <div class="card">
     <header>
     {{title}}
     </header>
@@ -8,4 +8,4 @@
     </div>
     <h3>{{price}}</h3>
     <p> {{description}}</p>
-</div>
+</div> --}}
