--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="/api/products">Products</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/api/cart">Cart</a>
+                <a class="nav-link" href="#">Cart</a>
               </li>
                 <li class="nav-item login">
                 {{#if logged_in}}
