--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,24 +1,23 @@
-{{!-- {{#each products as |product|}}
-{{> product-details}}
 
-{{/each}} --}}
-
-
-
-    {{#each products as |product|}}
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="{{product.image}}" alt="{{product.description}}" class="img-responsive" />
-      <div class="caption">
-        <h3>{{product.title}}</h3>
-        <p class="description">{{product.description}}</p>
-        <div class="clearfix">
-          <div class="price pull-left">{{product.price}}</div>
-          <a href="#" class="btn btn-success pull-right" role="button">Add to Cart</a>
+<div class="container">
+    <div class="row">
+        {{#each products as |product|}}
+        <div class="col-sm-4 pb-5 pt-5">
+            <a class="thumbnail" href="#">
+                <img src="{{product.image}}" alt="{{product.description}}" class="img-responsive">
+            </a>
+            <div class="caption"></div>
+            <h3>{{product.title}}</h3>
+            <p class="description">{{product.description}}</p>
+            <div class="clearfix">
+                <div class="price pull-left">${{product.price}}</div>
+                <a href="#" class="btn btn-success pull-right" role="button">Add to Cart</a>
+            </div>
         </div>
-      </div>
+        {{/each}}
     </div>
 </div>
-    {{/each}}
+
+
+
  
