--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -149,7 +149,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="card">
             <div class="card-body">
-              <h4>Jewerly</h4>
+              <h4>Jewelery</h4>
               
               <a href="#" class="more hover link-primary">Browse products</a>
             </div>
