--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -25,7 +25,55 @@
 </section>
 <br>
 <br>
+<!-- Jumbotron -->
+    <!-- <div class="jumbotron text-white bg-image"> 
 
+      <h1 class="text-white">Your #1 Online Fake Store</h1>
+      <p class="lead">We produce fake stock and made-to-order fake products.</p>
+      <hr class="my-4">
+      <p>Sign up today and start your own fake store. </p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      </p>
+    </div> -->
+  </section>
+<!-- END JUMBOTRON-->
+
+
+<!-- FEATURED PRODUCTS BEGIN -->
+<!-- begin section -->
+<section class="wrapper bg-white">
+  <div class="container py-14 py-md-17">
+    <div class="row text-center">
+      <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+        <h2 class="fs-15 text-uppercase text-primary mb-3">Featured Products</h2>
+        <br>
+        <h3 class="display-4 mb-10 px-xl-10">Browse our favorite products. </h3>
+      </div>
+    </div>
+    <br>
+
+    <div class="container">
+    <div class="row">
+        {{#each products as |product|}}
+        <div class="col-sm-3 pb-5 pt-5">
+            <a class="thumbnail" href="#">
+                <img src="{{product.image}}" alt="{{product.description}}" class="img-responsive">
+            </a>
+            <div class="caption"></div>
+            <h3>{{product.title}}</h3>
+            <p class="description">{{product.description}}</p>
+            <div class="clearfix">
+                <div class="price pull-left">${{product.price}}</div>
+                <a href="#" class="btn btn-success pull-right" role="button">Add to Cart</a>
+            </div>
+        </div>
+        {{/each}}
+    </div>
+</div>
+
+
+   
 <br>
 <br>
 <!-- CATEGORIES SECTION BEGIN -->
