linked catagories to perspective products

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -92,7 +92,7 @@
           <div class="card">
             <div class="card-body">
              <h4>Jewlery</h4>
-              <a href="" class="more hover link-primary">Browse products</a>
+              <a href="/api/products/jewelery" class="more hover link-primary">Browse products</a>
             </div>
            
           </div>
@@ -103,7 +103,7 @@
           <div class="card">
             <div class="card-body">
               <h4>Electronics</h4>
-              <a href="#" class="more hover link-primary">Browse products</a>
+              <a href="/api/products/electronics" class="more hover link-primary">Browse products</a>
             </div>
             
           </div>
@@ -115,7 +115,7 @@
             <div class="card-body">
               <h4>Women's Clothing</h4>
               
-              <a href="#" class="more hover link-primary">Browse products</a>
+              <a href="/api/products/womens" class="more hover link-primary">Browse products</a>
             </div>
             
           </div>
@@ -127,7 +127,7 @@
             <div class="card-body">
               <h4>Men's Clothing</h4>
               
-              <a href="#" class="more hover link-primary">Browse products</a>
+              <a href="/api/products/mens" class="more hover link-primary">Browse products</a>
             </div>
             
           </div>
