--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="#categories">Categories <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/#categories">Categories <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="/api/products">Products</a>
