added boarders to product cards

--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         {{#each products as |product|}}
-        <div class="col-sm-4 pb-5 pt-5">
+        <div class="col-sm-4 pb-5 pt-5 product">
             <a class="thumbnail" href="#">
                 <img src="{{product.image}}" alt="{{product.description}}" class="img-responsive">
             </a>
