--- a/public/css/style.css
+++ b/public/css/style.css
@@ -197,10 +197,15 @@ hr:not([size]) {
   line-height: 60px; /* Vertically center text */
   background-color: #343a40;
 }
-
+.product{
+  color:black;
+   border-style: double;
+ 
+ }
 .container{
   padding-top: 5rem;
 }
+
 
 .img-responsive{
   border: 1px solid #ddd;
