--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,7 +45,7 @@
               </li>
                 <li class="nav-item login">
                 {{#if logged_in}}
-                <a class="nav-link" href="/logout" id="logout">Logout</a>
+                <a class="nav-link" href="#" id="logout">Logout</a>
                 </li>
                 {{else}}
                 <a class="nav-link" href="/login">Login</a>
