--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -31,7 +31,7 @@
       </div>
       <div class="form-group">
         <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="form-input" type="password" id="password-signup" minlength="6" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
