--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -18,7 +18,7 @@
               </div>
           </div>
           <div class="col-lg-6 col-md-7 col-12">
-              <img src="/img/promo1.jpeg" alt="" class="main-image">
+              <img src="/img/promo1.jpeg" alt="Responsive image" class="main-image">
           </div>
       </div>
   </div>
@@ -154,7 +154,8 @@
 <div class="row justify-content-md-center">
   <!-- begin img -->
   <div>
-    <figure><img class="w-auto" src="/img/rocket.png" srcset="/img/rocket@2x.png 2x" alt="" /></figure>
+    <figure><img class="main-image" src="/img/rocket.png" srcset="/img/rocket@2x.png 2x" alt="Responsive image" /></figure>
+     
   </div>
     <!--end img -->
   <!-- begin section header content -->
