--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,17 +22,23 @@
   <body>
     <section>
       <!--START MAIN NAV-->
-     
-        <!-- Image and text -->
+
+         <!-- Image and text -->
+        <div class="container-fluid">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+           
           <!-- Logo -->
-          <a class="navbar-brand" href="/">
-            <img src="/img/pngegg.png" width="40" height="40" class="d-inline-block align-top" alt="">
-            Really Good Fake Store
-          </a>
+          <img src="/img/pngegg.png" width="40" height="40" class="d-inline-block align-top" alt="">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
           <!-- End Logo -->
           <!-- START MAIN NAV ELEMENTS -->
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <a class="navbar-brand" href="/">
+            
+            Really Good Fake Store
+          </a>
             <ul class="navbar-nav">
               <li class="nav-item active">
                 <a class="nav-link" href="/#categories">Categories <span class="sr-only">(current)</span></a>
@@ -53,9 +59,10 @@
                 {{/if}}
             </ul>
           </div>
-        </nav>
+          </div>
+        </nav> --}}
       </section>
-      <!-- END NAV ELEMENTS -->
+      <!-- END NAV ELEMENTS --> 
 
       {{{body}}}
 
@@ -75,9 +82,7 @@
 <!-- Popper and Bootstrap JS -->
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
    {{#if logged_in}}
     <script src="/js/logout.js"></script>
     {{/if}}
